@@ -9,6 +9,9 @@ from 2.7.17 to 2.7.18
 - fixed bug avoiding dar to repair archives relying on block compression,
   testing the "repaired" archive lead to reporting corrupted data for all
   compressed files and compressed EA.
+- disabling min-digits checks for auxiliary and reference backups when
+  they are stored in a remote repository (these checks was avoiding using
+  remote auxiliary and reference backups).
 
 from 2.7.16 to 2.7.17
 - fixed bug where -R path ending with // was breaking the path filtering
